force-app/main/default/objects/Limits_Consumed__c/Limits_Consumed__c.object-meta.xml
<CustomObject>
    <label>Limits Consumed</label>
    <nameField>
        <label>Limits Consumed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limits Consumed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>