force-app/main/default/objects/Limits_Consumed__c/fields/Callouts__c.field-meta.xml
<CustomField>
    <fullName>Callouts__c</fullName>
    <label>Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>