force-app/main/default/objects/Limits_Consumed__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>