force-app/main/default/objects/Limits_Consumed__c/fields/Mobile_Push_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Push_Notifications__c</fullName>
    <label>Mobile Push Notifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>