force-app/main/default/objects/Limits_Consumed__c/fields/Publish_Immediate_DML__c.field-meta.xml
<CustomField>
    <fullName>Publish_Immediate_DML__c</fullName>
    <label>Publish Immediate DML</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>