force-app/main/default/objects/Limits_Consumed__c/fields/Queueables__c.field-meta.xml
<CustomField>
    <fullName>Queueables__c</fullName>
    <label>Queueables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>