force-app/main/default/objects/Limits_Consumed__c/fields/SOQL_Query_Rows__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query_Rows__c</fullName>
    <label>SOQL Query Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>