force-app/main/default/objects/Limits_Consumed__c/fields/SOSL_Queries__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Queries__c</fullName>
    <label>SOSL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>